oxiplate-derive/tests/broken/7-bit-character-code-span.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline = "hello\x41{{"]
struct Data {}

fn main() {
    let data = Data {};

    print!("{}", data);
}
